--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Responsive Meta Tag -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Trivia Game</title>
+    <title>GIPHY API</title>
 
       <!-- CSS Reset -->
       <link rel="stylesheet" href="assets/css/reset.css" media="screen" title="no title" />
@@ -58,7 +58,7 @@
 
       <div class="row gifBox" id="gifBox">
         <p class="btnBox">
-          <button type="button" name="button">test</button>
+
         </p>
       </div>
 
